force-app/main/default/objects/fferpcore__MessageType__c/fferpcore__MessageType__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__MessageTypeHelp</customHelpPage>
    <description>A type of message that can be passed through the system.</description>
    <label>Message Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>