force-app/main/default/objects/fferpcore__MessageType__c/fields/fferpcore__Description__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>