force-app/main/default/objects/fferpcore__MessageType__c/fields/fferpcore__Parent__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>fferpcore__MessageType__c</referenceTo>
    <relationshipLabel>Child Message Types</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>